fix website paragraph

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -149,8 +149,7 @@
           <div class="u-repeater u-repeater-1"></div>
         </div>
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/screenshot-localhost_8501-2023.02.08-17_55_431.png" alt="" data-image-width="796" data-image-height="898">
-        <p class="u-align-left u-custom-font u-font-georgia u-text u-text-2"> A web application that shows the weather for the next few days in any city, with a graph or with images.<br>
-        </p>
+        <p class="u-align-left u-custom-font u-font-georgia u-text u-text-2"> A web application that shows the weather for the next few days in any city, with a graph or with images.<br></p>
         <p class="u-align-left u-custom-font u-font-open-sans u-text u-text-3">Backend code calls an API, getting the datas for specific city and number of days. The data is processed and displayed on webapp with streamlit, as a graph with plotly or as images.</p>
       </div>
     </section>
