Update website to fix paragraph bug 5

--- a/resume-site/Home.html
+++ b/resume-site/Home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​Hello!, ​Kalvin Piterson, My Portfolio, Testimonials, ​IT Solution Strategy Development, ​My Experties, Nam ultrices ultrices nec tortor pulvinar esteras loremips est orem., Follow us, Contact Me">
     <meta name="description" content="">
-    <title>Simon | Portfolio</title>
+    <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-palette-1-base u-xl-mode" data-lang="fr">
+  <body class="u-body u-palette-1-base u-xl-mode" data-lang="fr">
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-eb8a" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" data-image-width="1920" data-image-height="1080">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-list u-list-1">
@@ -79,7 +79,7 @@
         <div class="u-absolute-hcenter u-border-4 u-border-white u-line u-line-horizontal u-line-1"></div>
         <h2 class="u-align-center u-custom-font u-font-merriweather u-text u-text-1" data-lang-en="My Portfolio">Projects</h2>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-custom-font u-font-georgia u-text u-text-default-lg u-text-default-xl u-text-2">Cloud Portfolio Website&nbsp;</p>
-        <a href="https://github.com/simonhaddadgervais/portfolio" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-hover-custom-color-4 u-radius-50 u-btn-1" target="_blank">SOURCE CODE<br>
+        <a href="https://github.com/simonhaddadgervais/cloudresume" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-hover-custom-color-4 u-radius-50 u-btn-1" target="_blank">SOURCE CODE<br>
         </a>
         <p class="u-align-left u-custom-font u-font-georgia u-text u-text-3">A website, hosted on AWS cloud, for my portfolio. The interesting bit was to deploy everything using IaC and implementing CI/CD.</p>
         <div class="u-expanded-width u-list u-list-1">
@@ -171,18 +171,21 @@
         </p>
       </div>
     </section>
-    <script>
-        fetch('https://xf5z9o0wwh.execute-api.us-east-1.amazonaws.com/Prod/visitors_count')
-            .then(response => response.json())
-            .then((data) => {
-                document.getElementById('visitors').innerText = data.visitors
-            })
-    </script>
-
+    
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-68bd"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-custom-font u-font-georgia u-text u-text-default u-text-1">Visitors : <span id="visitors" /></p>
+        <p class="u-custom-font u-font-georgia u-text u-text-default u-text-1">Visitors :</p>
       </div></footer>
-
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.site" target="_blank">
+        <span>Best Website Builder</span>
+      </a>. 
+    </section>
   
 </body></html>
