update text content

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -25,10 +25,10 @@
 		"name": ""
 }</script>
     <meta name="theme-color" content="#f06e49">
-    <meta property="og:title" content="Simon | Portfolio">
+    <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="index.html" data-home-page-title="Simon | Simon" class="u-body u-palette-1-base u-xl-mode" data-lang="fr">
+  <body data-home-page="index.html" data-home-page-title="Home" class="u-body u-palette-1-base u-xl-mode" data-lang="fr">
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-eb8a" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" data-image-width="1920" data-image-height="1080">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-list u-list-1">
@@ -37,7 +37,7 @@
         <h1 class="u-align-center-lg u-align-center-xl u-align-left-md u-align-left-sm u-align-left-xs u-custom-font u-font-roboto u-text u-text-grey-5 u-text-1" data-animation-out="0">Hi I'm Simon</h1>
         <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/linkedin1.png" alt="" data-image-width="1264" data-image-height="1264" data-href="https://www.linkedin.com/in/simon-haddad-gervais-30ba87216/" data-target="_blank">
         <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2" src="images/github-mark-white.png" alt="" data-image-width="230" data-image-height="225" data-href="https://github.com/simonhaddadgervais?tab=repositories" data-target="_blank">
-        <p class="u-align-center u-text u-text-grey-5 u-text-2" data-animation-out="0">After my studies in computer science and my experiences as data analyst and client solution architect, I strive to work in Devops culture and use my technical skills and my client-role experience to help clients achieve their goal faster.</p>
+        <p class="u-align-center u-text u-text-grey-5 u-text-2" data-animation-out="0">After my studies in computer science and my experiences as data analyst and client solution architect, I strive to work in DevOps culture and use my skills to help clients achieve their goal faster.</p>
         <p class="u-align-center u-text u-text-white u-text-3" data-lang-en="​I’m a digital designer in love with photography, painting and discovering new worlds and cultures. ​Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor. " data-animation-out="0">I love to learn and I spend a lot of my free time learning new technologies and expending m​y knowledge</p>
         <h1 class="u-align-center-sm u-align-center-xl u-align-center-xs u-align-left-lg u-align-left-md u-text u-text-white u-text-4" data-animation-out="0">Skill​s </h1>
         <div class="u-border-4 u-border-white u-line u-line-horizontal u-line-1" data-animation-out="0"></div>
@@ -78,19 +78,39 @@
       
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-absolute-hcenter u-border-4 u-border-white u-line u-line-horizontal u-line-1"></div>
-        <h2 class="u-align-center u-custom-font u-font-merriweather u-text u-text-1" data-lang-en="My Portfolio">Projects</h2>
-        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-custom-font u-font-georgia u-text u-text-default-lg u-text-default-xl u-text-2">Cloud Portfolio Website&nbsp;</p>
+        <ul class="u-align-left-xs u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-text u-text-1">
+          <li>
+            <span style="font-weight: 700;">Lambda </span>to build a function that counts and returns the number of visits on my website
+          </li>
+          <li>
+            <span style="font-weight: 700;">DynamoDB </span>to store this data
+          </li>
+          <li>
+            <span style="font-weight: 700;">API </span>
+            <span style="font-weight: 700;">Gateway </span>to display the data on my website
+          </li>
+          <li>
+            <span style="font-weight: 700;">Git </span>as VCS, with <span style="font-weight: 700;">Github</span>
+          </li>
+          <li>Test with pytest to test the function</li>
+          <li>
+            <span style="font-weight: 700;">Github </span>
+            <span style="font-weight: 700;">Actions </span>to automate testing, build and deployment 
+          </li>
+        </ul>
+        <h2 class="u-align-center u-custom-font u-font-merriweather u-text u-text-2" data-lang-en="My Portfolio">Projects</h2>
+        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-custom-font u-font-georgia u-text u-text-default-lg u-text-default-xl u-text-3">Cloud Portfolio Website&nbsp;</p>
         <a href="https://github.com/simonhaddadgervais/cloudresume" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-hover-custom-color-4 u-radius-50 u-btn-1" target="_blank">SOURCE CODE<br>
         </a>
-        <p class="u-align-left u-custom-font u-font-georgia u-text u-text-3">A website, hosted on AWS cloud, for my portfolio. The interesting bit was to deploy everything using IaC and implementing CI/CD.</p>
+        <p class="u-align-left u-custom-font u-font-georgia u-text u-text-4">A website, hosted on AWS cloud, for my portfolio. The interesting bit was to deploy everything using IaC and implementing CI/CD.</p>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1"></div>
         </div>
+        <img class="u-image u-image-contain u-image-default u-image-1" src="images/resume-design1.png" alt="" data-image-width="1234" data-image-height="653">
         <div class="u-border-2 u-border-white u-line u-line-horizontal u-line-2"></div>
-        <ul class="u-align-left u-text u-text-4">
+        <ul class="u-align-left u-text u-text-5">
           <li>
-            <span style="font-weight: 700;">AWS SAM</span>
-            <span style="background-color: #292d33; color: #ffffff; font-family: 'Open Sans',sans-serif;"> as the IaC solution</span>
+            <span style="font-weight: 700;">AWS SAM</span>&nbsp;with <span style="font-weight: 700;">Cloud Formation</span> as the <span style="font-weight: 700;">IaC</span> solution
           </li>
           <li>
             <span style="font-weight: 700;">S3</span> to host file
@@ -99,26 +119,29 @@
             <span style="font-weight: 700;">Cloudfront</span> and <span style="font-weight: 700;">ACM</span> to serve HTTPS requests
           </li>
           <li>
-            <span style="font-weight: 700;">Route 53</span> for the DNS
+            <span style="font-weight: 700;">Route 53</span>&nbsp;as DNS
           </li>
-          <li>As that point the website was running but I also added :</li>
+        </ul>
+        <h5 class="u-align-left u-text u-text-6"> As that point the website was running but I also added :</h5>
+        <ul class="u-align-left u-hidden-xs u-text u-text-7">
           <li>
-            <span style="font-weight: 700;">Lambda</span> to build a function that count the number of visits on my website and returns the count
+            <span style="font-weight: 700;">Lambda</span>
+            <span style="background-color: #292d33; color: #ffffff; font-family: 'Open Sans',sans-serif;"> to build a function that counts and returns the number of visits on my website</span>
           </li>
           <li>
             <span style="font-weight: 700;">DynamoDB</span> to store this data
           </li>
           <li>
-            <span style="font-weight: 700;">API Gateway</span>
+            <span style="font-weight: 700;">API Gateway&nbsp;</span>to display the data on my website
           </li>
-          <li>to be able to display the data on our website by communicating with my function and my DB</li>
           <li>
-            <span style="font-weight: 700;">Git</span> as our VCS, with Github
+            <span style="font-weight: 700;">Git</span> as VCS, with <span style="font-weight: 700;">Github</span>
           </li>
-          <li>Test with pytest to test our function</li>
-          <li>Github Actions to automate testing and deployment</li>
+          <li>Test with pytest to test the function</li>
+          <li>
+            <span style="font-weight: 700;">Github Actions</span> to automate testing, building and deployment
+          </li>
         </ul>
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/resume-design.png" alt="" data-image-width="1186" data-image-height="603">
       </div>
     </section>
     <section class="u-align-center u-clearfix u-palette-5-dark-3 u-section-4" id="carousel_8992">
@@ -183,5 +206,6 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-68bd"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-custom-font u-font-georgia u-text u-text-default u-text-1">Visitors :<span id="visitors" /></p>
       </div></footer>
+
   
 </body></html>
