update text content

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -95,7 +95,7 @@
           <li>Test with pytest to test the function</li>
           <li>
             <span style="font-weight: 700;">Github </span>
-            <span style="font-weight: 700;">Actions </span>to automate testing, build and deployment 
+            <span style="font-weight: 700;">Actions </span>to automate testing, build and deploying
           </li>
         </ul>
         <h2 class="u-align-center u-custom-font u-font-merriweather u-text u-text-2" data-lang-en="My Portfolio">Projects</h2>
@@ -122,7 +122,7 @@
             <span style="font-weight: 700;">Route 53</span>&nbsp;as DNS
           </li>
         </ul>
-        <h5 class="u-align-left u-text u-text-6"> As that point the website was running but I also added :</h5>
+        <h5 class="u-align-left u-text u-text-6"> At that point the website was running but I also added :</h5>
         <ul class="u-align-left u-hidden-xs u-text u-text-7">
           <li>
             <span style="font-weight: 700;">Lambda</span>
@@ -139,7 +139,7 @@
           </li>
           <li>Test with pytest to test the function</li>
           <li>
-            <span style="font-weight: 700;">Github Actions</span> to automate testing, building and deployment
+            <span style="font-weight: 700;">Github Actions</span> to automate testing, building and deploying
           </li>
         </ul>
       </div>
@@ -206,6 +206,5 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-68bd"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-custom-font u-font-georgia u-text u-text-default u-text-1">Visitors :<span id="visitors" /></p>
       </div></footer>
-
   
 </body></html>
