change cloud resume image

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -106,7 +106,7 @@
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1"></div>
         </div>
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/resume-design1.png" alt="" data-image-width="1234" data-image-height="653">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="images/resume-design.png" alt="" data-image-width="1234" data-image-height="653">
         <div class="u-border-2 u-border-white u-line u-line-horizontal u-line-2"></div>
         <ul class="u-align-left u-text u-text-5">
           <li>
