Add project design pictures

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -75,7 +75,7 @@
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1"></div>
         </div>
-        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/resume-design1.png" alt="" data-image-width="1234" data-image-height="653">
+        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/resume-design.png" alt="" data-image-width="1234" data-image-height="653">
         <ul class="u-align-left u-text u-text-3">
           <li>
             <span style="font-weight: 700;">Lambda </span>to build a function that counts and returns the number of visits on my website
