--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -224,7 +224,7 @@
       </div>
     </section>
     <script>
-        fetch('https://xf5z9o0wwh.execute-api.us-east-1.amazonaws.com/Prod/visitors_count')
+        fetch('https://f1fo19ebsc.execute-api.us-east-1.amazonaws.com/Prod/visitors_count')
             .then(response => response.json())
             .then((data) => {
                 document.getElementById('visitors').innerText = data.visitors
